# ThermostatV3

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/Adafruit_BusIO/: CMakeLists.txt
components/Adafruit_GFX/: Adafruit_GFX.cpp  CMakeLists.txt
components/Adafruit_GFX/Fonts/: FreeSans45pt7b.h  Meteocons_Regular_50.h
components/GxEPD2/: CMakeLists.txt
components/GxEPD2/examples/GxEPD2_Example/: GxEPD2_Example.ino  GxEPD2_display_selection.h
components/GxEPD2/examples/GxEPD2_HelloWorld/: GxEPD2_display_selection.h
components/GxEPD2/examples/GxEPD2x_FastBlackWhiteOnColor/: GxEPD2x_FastBlackWhiteOnColor.ino
components/GxEPD2/src/: GxEPD2_BW.h
components/LedCode/: CMakeLists.txt  LedTask.c
components/LedCode/include/: LedTask.h
components/MultiButton/: CMakeLists.txt  Kconfig.projbuild  MultiButton.c
components/MultiButton/include/: MultiButtonHeader.h
components/esp_littlefs/: idf_component.yml
components/hdc1080/: CMakeLists.txt  hdc1080.c
components/hdc1080/include/: hdc1080.h
components/lora/: CMakeLists.txt  Kconfig.projbuild  lora.c
components/lora/include/: lora.h  lora_reg.h
components/provision/: CMakeLists.txt  ProvisionMain.c
components/provision/include/: ProvisionHeader.h
components/xag_battery_component/: CMakeLists.txt  xag_battery_component.c
components/xag_battery_component/include/: xag_battery_component.h
components/xag_mqtt_component/: CMakeLists.txt  Kconfig.projbuild  README.md  xag_mqtt_component.c
components/xag_mqtt_component/include/: xag_mqtt_component.h
components/xag_nvs_component/: CMakeLists.txt  README.md  xag_nvs_component.c
components/xag_nvs_component/include/: xag_nvs_component.h
components/xag_ota_component/: CMakeLists.txt  Kconfig.projbuild  README.md  xag_ota_component.c
components/xag_ota_component/include/: xag_ota_component.h
components/xag_wifi_component/: CMakeLists.txt  Kconfig.projbuild  README.md  xag_wifi_component.c
components/xag_wifi_component/include/: xag_wifi_component.h
main/: ButtonPress.c  CMakeLists.txt  ConnectWIFI.c  Kconfig.projbuild  LoraComs.c  Main.c  ULPFile.c  battery_monitor.c  component.mk  hello_world_main.cpp  logo.h
main/include/: Config.h
main/ulpF/: LoRa.S  conditions.S  hdc1080.S  i2c.S  lora_tx.s  main.S  spi.S  stack.S
